creating tasks component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,4 +19,6 @@
                 (select)="onSelectUser($event)"></app-user>
         </li>
     </ul>
+    Tasks of that user
+    <app-tasks [username]="selectedUser?.name"></app-tasks>
 </main>
