--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,1 +1,12 @@
-<h2>User: {{username}}</h2>
+<section id="tasks">
+    <header>
+        <h2> {{username}}'s Tasks </h2>
+        <menu><button>Add Task</button></menu>
+    </header>
+
+    <ul>
+        <li> <app-task></app-task> </li>
+        <li> <app-task></app-task> </li>
+        <li> <app-task></app-task> </li>
+    </ul>
+</section>
