--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -5,8 +5,8 @@
     </header>
 
     <ul>
-        <li> <app-task></app-task> </li>
-        <li> <app-task></app-task> </li>
-        <li> <app-task></app-task> </li>
+        @for(task of selectedUserTasks; track task){
+        <li> <app-task [task]="task"></app-task> </li>
+        }
     </ul>
 </section>
