dynamic css styling with class bindings

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,8 @@
     <ul id="users">
         @for(user of users; track user.id){
         <li>
-            <app-user [user]="user" (select)="onSelectUser($event)"></app-user>
+            <app-user [user]="user" [selected]="selectedUser && selectedUser.id === user.id"
+                (select)="onSelectUser($event)"></app-user>
         </li>
         }
     </ul>
