--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -5,7 +5,7 @@
     </header>
 
     <ul>
-        @for(task of selectedUserTasks; track task){
+        @for(task of selectedUserTasks; track task.id){
         <li> <app-task [task]="task"></app-task> </li>
         }
     </ul>
