--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,4 +1,4 @@
-<div>
+<div [class.active]="selected">
     <button (click)="onSelectUser()">
         <img [src]="imagePath" [alt]="user.name" />
         <span>{{user.name}}</span>
