creating new task dialog

--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,7 +1,11 @@
+@if(isAddingTask){
+<app-new-task (cancel)="closeAddNewTaskDialog()" />
+}
+
 <section id="tasks">
     <header>
         <h2> {{username}}'s Tasks </h2>
-        <menu><button>Add Task</button></menu>
+        <menu><button (click)="onStartAddTask()">Add Task</button></menu>
     </header>
 
     <ul>
