--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,5 +1,5 @@
 @if(isAddingTask){
-<app-new-task (cancel)="closeAddNewTaskDialog()" />
+<app-new-task (cancel)="closeAddNewTaskDialog()" (add)="addNewTask($event)" />
 }
 
 <section id="tasks">
