--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,16 +1,21 @@
-@if(isAddingTask){
-<app-new-task [userId]="userId" (close)="closeAddNewTaskDialog()" />
+@if (isAddingTask) {
+  <app-new-task [userId]="userId" (close)="onCloseAddTask()" />
 }
 
 <section id="tasks">
-    <header>
-        <h2> {{username}}'s Tasks </h2>
-        <menu><button (click)="onStartAddTask()">Add Task</button></menu>
-    </header>
+  <header>
+    <h2>{{ name }}'s Tasks</h2>
+    <menu>
+      <button (click)="onStartAddTask()">Add Task</button>
+    </menu>
+  </header>
 
-    <ul>
-        @for(task of selectedUserTasks; track task.id){
-        <li> <app-task [task]="task"></app-task> </li>
-        }
-    </ul>
+  <ul>
+    @for (task of selectedUserTasks; track task.id) {
+      <li>
+        <app-task [task]="task" />
+      </li>
+    }
+  </ul>
 </section>
+
