--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,6 +1,6 @@
-<app-card [class.active]="selected">
-    <button (click)="onSelectUser()">
-        <img [src]="imagePath" [alt]="user.name" />
-        <span>{{user.name}}</span>
-    </button>
+<app-card>
+  <button [class.active]="selected" (click)="onSelectUser()">
+    <img [src]="imagePath" [alt]="user.name" />
+    <span>{{ user.name }}</span>
+  </button>
 </app-card>
